form.field.Text: prevent input outlines when being wrapped #4007

--- a/resources/scss/src/form/field/Text.scss
+++ b/resources/scss/src/form/field/Text.scss
@@ -10,6 +10,10 @@
         .neo-input-wrapper {
             border-color: v(textfield-border-color-active) !important;
             outline     : v(textfield-outline-active);
+
+            .neo-textfield-input {
+                outline: none;
+            }
         }
 
         .neo-label-wrapper { // labelPosition: inline
